# src/devpilot_core/interfaces/api/contracts.py
@@ -40,6 +40,7 @@ CANONICAL_FASTAPI_ROUTER_MODULES = (
     "devpilot_core.interfaces.api.routers.guided_sdlc",
     "devpilot_core.interfaces.api.routers.project_entry",
     "devpilot_core.interfaces.api.routers.planning",
+    "devpilot_core.interfaces.api.routers.release",
 )
 ALLOWED_API_CONTRACT_METHODS = frozenset({"GET", "POST", "PUT", "PATCH", "DELETE"})
 
